minitrace-macro/tests/trace/ui/err/002-name-is-symbol.rs
use minitrace::trace;

#[trace(name = struct)]
fn f() {}

fn main() {}
